[gd_scene load_steps=2 format=2]

[ext_resource path="res://ByteOperationUI.gd" type="Script" id=1]

[node name="ByteOperationUI" type="HBoxContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FlagInput" type="SpinBox" parent="."]
margin_right = 74.0
margin_bottom = 800.0
max_value = 10000.0

[node name="OperationInput" type="OptionButton" parent="."]
margin_left = 78.0
margin_right = 107.0
margin_bottom = 800.0

[node name="ValueInput" type="SpinBox" parent="."]
margin_left = 111.0
margin_right = 185.0
margin_bottom = 800.0
max_value = 10000.0
